Use HTML formatting so it works better on GitHub.

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -1,7 +1,7 @@
 <h1 align="center">Deterministic Querying for the Distributed Web</h1>
 
 <p align="center">
-[Brendan O'Brien](http://www.brendan.nyc) &ndash; [Michael Hucka](http://www.cds.caltech.edu/~mhucka/)
+<a href="http://www.brendan.nyc">Brendan O'Brien</a> &ndash; <a href="http://www.cds.caltech.edu/~mhucka/">Michael Hucka</a>
 </p>
 <p align="center">
 July 2017
@@ -26,6 +26,8 @@ Central to the problem of treating open data as reusable components is that ther
 
 
 <!--
+provenance
+
 These limitations risk preventing future developments from reaching their potential. -->
 
 
