Checkpoint version: strengthened argument, added many refs.

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -5,26 +5,36 @@
 <a href="http://www.cds.caltech.edu/~mhucka/">Michael Hucka</a>
 </p>
 <p align="center">
-July 2017
+August 2017
 </p>
 <p align="center">
 <b>Abstract</b>
 </p>
 
-The current infrastructure that underlies the distribution and processing of data over the Internet has enabled dramatic advances in a great variety of human endeavors.  Recent trends promoting open data promise even greater benefits as the number and variety of networked data sets grows.  However, while current technologies and architectures obviously do work, they also show signs of systemic inefficiencies that impede effective large-scale discovery, distribution, preservation and reuse of data sets.  An important source of inefficiencies is rooted in the database-centered pipeline that underlies much of data processing on the Internet today.  The ongoing transition to a content-addressed permanent web offers an opportunity to replace certain software architecture patterns with alternatives that are more efficient and scale more effectively.  We introduce one such new pattern, _deterministic querying_, that combines formalized query definitions, formalized resource descriptions, linked metadata, hashing, and a content-addressed file system.  The result supports database-free reuse of data and data processing results---and can do so on the scale of the global Internet.
+The current infrastructure that underlies the distribution and processing of data over the Internet has enabled dramatic advances in a wide variety of human activities.  Recent trends promoting open data promise even greater benefits as the number and variety of networked data sets grows.  However, while current technologies and architectures obviously do work, they also show signs of systemic inefficiencies that impede effective large-scale discovery, distribution, preservation and reuse of data sets.  An important source of inefficiencies is rooted in the database-centered pipeline that underlies much of data processing on the Internet today.  The ongoing transition to a content-addressed permanent web offers an opportunity to replace certain software architecture patterns with alternatives that are more efficient and scale more effectively.  We introduce one such new pattern, _deterministic querying_, that combines formalized query definitions, formalized resource descriptions, linked metadata, hashing, and a content-addressed file system.  The result supports database-free reuse of data and data processing results---and can do so on the scale of the global Internet.
 
 
 # Introduction
 
-Open data is a boon to research and progress [@murray2008open; @piwowar2013data; @lowndes2017our; @gewin2016data].  The continuing growth of data being made available on the Internet promises a windfall of benefits, enabling new discoveries, powering new innovations, and increasing transparency.  This growing open data movement has in part been inspired by and driven by the open _source_ movement, and in fact many of the principles espoused by open data advocates mirror those of open source efforts.  However, open source efforts currently have at least one advantage over open data: the former has effective means of _accumulating results in a common pool_ so that they can be reused rather than reinvented.
+Open data is a boon to research and progress [@murray2008open; @piwowar2013data; @lowndes2017our; @gewin2016data; @miguel2014promoting].  Though exact numbers are unavailable for the amount of data stored around the world, it is clear it must already be stupendous.  Measured in terms of web pages, the best estimate in mid-2017 puts the number of visible web pages at nearly 50&nbsp;billion [@vandenbosch2016estimating], while in terms of data transmitted over the Internet, global IP traffic reached 1.2&nbsp;zettabytes in 2016 and is predicted to reach 3.3 zettabytes per year by 2021 [@cisco2017zettabyte].  The continuing growth of data being made available on the Internet promises a windfall of benefits in many areas, enabling new discoveries, powering new innovations, lowering costs, and increasing transparency [@martin2017opening; @mckiernan2016open; @madan2017advances; @ferguson2014big; @west2014open; @kansakar2016review].
 
-Reuse is at the heart of open source.  Developers are encouraged to share their work, and to seek out existing solutions to problems.  As a result, open software builds upon other software, often by composing larger works out of smaller, reusable elements.  This is possible because the reusable software elements---objects, functions, programs, modules---can be reused as static entities incorporated into other works.  The software elements represent intellectual labor: they are answers to questions.  Open-source developers solve new problems in large part by seeking out answers to old questions and then using those answers to build their solutions.  This approach works well in software in part because developers have created precise mechanisms to describe the questions, the forms of the answers, and how to store and exchange them.
+The open data movement has in part been inspired by and driven by the open _source_ movement, and many of the principles espoused by open data advocates mirror those of open source efforts [@baack2015datafication].  At the heart of both movements is the goal to share the results of people's work.  However, open source has developed methods that are arguably more effective than comparable methods used in open data today.  In particular, developers have effective methods for _accumulating reusable work results in common pools_ so that they can be _directly_ shared, discovered, compared, and reused.  We argue that the comparable operations in open data today are cumbersome and inefficient due to the prevailing system architectures and design patterns in use.
 
-By contrast, open data has no comparable, framework-agnostic means of composing solutions by building on old results.  In a practical sense, users of data often reinvent the same solutions: individual users and processes employ computing frameworks to consume datasets, perform operations on the data, and then interpret the results---and then often throw away the data produced by the operations.  This happens because the processed data are either assumed to be of no value to anyone else, or else the cost of storing, managing and sharing intermediate results is assumed to be higher than simply recomputing them on demand.  The consequence is that answers to questions are not being shared, discovered or reused by other potential users of open data.
+## The open-source advantage
+
+In open source, developers are encouraged to share their work, and to seek out existing solutions to problems [@crowston2008free; @bergquist2001power; @sojer2010code]. As a result, open source software builds upon other software, often by composing larger works out of smaller, reusable elements [@haefliger2008code].  This is possible because software elements---objects, functions, programs, modules---can be reused as static entities incorporated into other works.  The software elements represent intellectual labor: they are answers to questions.  Open-source developers solve new problems in part by seeking out answers to old questions and then using those answers to build their solutions.  This approach works well in software partly because developers have created precise mechanisms to describe the questions, the forms of the answers, and how to store and exchange them.  The questions and answers are defined by specific input and output conventions; storage, versioning, search and sharing is accomplished by revision control systems such as _git_; and composition is achieved by linking source code together into larger works.
+
+In open data, the situation is more diverse and the steps are more inefficient.  The most coherent framework for data reuse is Linked Data [@heath2011linked; @auer2014linked].  This involves databases serving content on the Internet in RDF format [e.g., @maali2012publishing]; search and discovery is aided by some topical catalogs [e.g., @pesce2015setting].  Consumers can query and reference the content in the databases, often by creating pipelines to access, translate and process the data at the user end [e.g., @klimek2016linkedpipes].  However, Linked Data sources remain a minority today---most data sources are shared using the far simpler approach of exposing a network API that enables users to search and access content stored in databases.  The heterogeneity of the APIs and data formats in these cases complicates reuse of data and pushes complexity to individual users.
+
+Whether using Linked Data or more conventional networked databases, it is important to note that different users often end up recreating the same solutions over and over.  The pattern is that some computing system is built to consume datasets, translate the data, perform operations on the data, and then interpret the results.  Sometimes the results are stored in a _local_ (not shared) database, usually in a different format than the source format; other times, the intermediate data produced by the operations is thrown away.  This happens because the processed data is either assumed to be of no value to anyone else, or else the cost of storing, managing and sharing intermediate results is assumed to be higher than simply recomputing them on demand.
+
+The consequence is that answers to questions are often not being shared, discovered or reused by other potential users of open data.
 
 ## Databases and modern software stacks
 
-Central to the problem of treating open data as reusable components is that there is no commonly-accepted methods for using the _output_ of an open data process as the _input_ to another open data process when the processes are not part of a common pipeline.  Methods for reusing computational results in distributed workflows do exist, but they are specific to particular execution environments or frameworks [e.g., @elghandour2012restore].  No common scheme exists for persisting and reusing results of computations produced by widely-used software stacks such as those within today's web applications---the applications that power so many cloud-based services.
+<!-- might work in citation to muir et al 2016 for how amount of data affects computation needs -->
+
+Central to the problem of treating open data as reusable components is that there is no commonly-accepted method for using the _output_ of an open data process as the _input_ to another open data process when the processes are not part of a common pipeline.  Methods for reusing computational results in distributed workflows do exist, but they are specific to particular execution environments or frameworks [e.g., @elghandour2012restore].  No common scheme exists for persisting and reusing results of computations produced by widely-used software stacks such as those within today's web applications---the applications that power so many cloud-based services.
 
 The architectural patterns underlying modern software stacks are part of the problem.  One of the greatest barriers to efficient reuse of results is the _positioning of the database_.  In many cases, the database is placed at the heart of a modern web-based application.  Data is stored in the database in a raw form, but then must be encoded into whatever form is consumed by the user at access time.  This approach of _interpreting the data outward_ towards the user makes perfect sense when the primary "view" or representation of this data is in the form of structured HTML:
 
@@ -44,7 +54,10 @@ This approach is flexible, and there is no question that it works---after all, i
   Database -> API Encode -> Network -> API Decode -> Process -> Database
 ```
 
-In today's software environments, this pattern uses multiple servers to take data out of one database, serve it across a network, decode it, process it, and put it into another database (which in fact may require additional encoding, if the output of the processing does not match how it is stored in the database---and it often does not).  Every step requires separate engineering and long-term software maintenance.  This pattern heavily favors holding the data as closed information because that "opening" this data is an active effort that would require additional engineering time, CPU cycles, etc.  Not only is this architecture inefficient in its use of network and computational resources: the economics of the arrangement discourage sharing outputs.
+In today's software environments, this pattern uses multiple servers to take data out of one database, serve it across a network, decode it, process it, and put it into another database (which in fact may require additional encoding, if the output of the processing does not match how it is stored in the database---and it often does not).  Further, since the amount of computing needed to process data grows with the amount of data [e.g., @muir2016real] and the amount of data generated by human activity grows continually, the amount of resources expended on this inefficient arrangement continues to increase.  To add insult to injury, every step requires separate engineering and long-term software maintenance.  This pattern heavily favors holding the data as closed information because  "opening" the data is an active effort that would require additional engineering time, CPU cycles, etc.
+
+In other words, not only is this architecture inefficient in its use of network and computational resources: the economics of the arrangement actively discourages sharing outputs.
+
 
 ## Reimaging distributed open data
 
